syntax = "proto3";

package shopping.cart.api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

service ShoppingCart {
    option (kalix.codegen) = {
        event_sourced_entity: {
            name: "shopping.cart.domain.ShoppingCart"
            entity_type: "shopping-cart"
            state: "shopping.cart.domain.CartState"
            events: "shopping.cart.domain.ItemAdded"
            events: "shopping.cart.domain.ItemRemoved"
        }
    };

    rpc AddItem(AddLineItem) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/cart/{cart_id}/items/add"
            body: "*"
        };
    }

    rpc RemoveItem(RemoveLineItem) returns (google.protobuf.Empty) {
        option (google.api.http).post = "/cart/{cart_id}/items/{product_id}/remove";
    }

    rpc GetCart(GetShoppingCart) returns (Cart) {
        option (google.api.http) = {
            get: "/carts/{cart_id}"
            additional_bindings: {
                get: "/carts/{cart_id}/items"
                response_body: "items"
            }
        };
    }
}

message Cart {
    repeated LineItem items = 1;
}

message LineItem {
    string product_id = 1;
    string name = 2;
    int32 quantity = 3;
}

message AddLineItem {
    string cart_id = 1 [(kalix.field).entity_key = true];
    string product_id = 2;
    string name = 3;
    int32 quantity = 4;
}
  
message RemoveLineItem {
    string cart_id = 1 [(kalix.field).entity_key = true];
    string product_id = 2;
}
  
message GetShoppingCart {
    string cart_id = 1 [(kalix.field).entity_key = true];
}
